<resources>
    <string name="app_name">WallPics</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="log_out">Log Out</string>
    <string name="upload">Upload</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome">Welcome To WallPics!</string>
    <string name="full_screen_image">full screen image</string>
    <string name="big_image_des">This is the full screen image user clicked on</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="empty_signing_up">You need to fill up all the details</string>
    <string name="signing_up_mismatch">Your Passwords Doesn\'t Match</string>
    <string name="signing_up_message">Signing You Up…</string>
    <string name="splash_image">Splash Image</string>
    <string name="grid_image">grid image</string>
    <string name="like">like button</string>
    <string name="image_share_button">image share button</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="folder_path">/sdcard/WallPics/</string>
    <string name="my_acc_string">My Account</string>
    <string name="my_account">My Account</string>
    <string name="about_us">About Us</string>
    <string name="add_your_image">Add Your Image</string>
</resources>
