<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.wallpics.SignInActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/image"
        android:id="@+id/sign_in_image"
        android:contentDescription="@string/splash_image"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_field"
        android:lines="1"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:fontFamily="monospace"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:id="@+id/password_field"
        android:fontFamily="monospace"
        android:layout_marginTop="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signing"
        style="?android:buttonBarStyle"
        android:layout_marginTop="30dp">
    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        style="?android:buttonBarButtonStyle"
        android:id="@+id/sign_in_button"
        android:text="@string/sign_in"
        android:layout_weight="1"
        android:layout_marginRight="3dp"
        android:textAllCaps="false" />
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            style="?android:buttonBarButtonStyle"
            android:id="@+id/sign_up_button"
            android:text="@string/sign_up"
            android:layout_weight="1"
            android:textAllCaps="false"/>
    </LinearLayout>
    <com.google.android.gms.common.SignInButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/google_btn"
        app:colorScheme="auto"/>

</LinearLayout>
